update nomenclature and dependencies

--- a/static/index.html
+++ b/static/index.html
@@ -47,7 +47,7 @@
 
 <body>
   <div class="container">
-    <!---- <h2>Captcha on Compute@Edge</h2> ---->
+    <!---- <h2>Captcha on Compute</h2> ---->
   </div>
 
   <form id="myform">
